--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
         //Bmob的maven仓库地址--必填
         maven {url 'https://dl.bintray.com/chaozhouzhang/maven' }
     }
