--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     implementation 'com.moxun:tagcloudlib:1.2.0'
     //今日头条适配方案
     implementation 'me.jessyan:autosize:1.2.1'
+    //融云
+    api 'cn.rongcloud.sdk:im_lib:2.10.5'
 
 }
