--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
         //Bmob的maven仓库地址--必填
         maven {url 'https://dl.bintray.com/chaozhouzhang/maven' }
+        maven {url  "https://dl.bintray.com/rongcloud/maven"}
     }
 }
 
