--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     //今日头条适配方案
     implementation 'me.jessyan:autosize:1.2.1'
     //融云
-    api 'cn.rongcloud.sdk:im_lib:2.10.5'
+//    api 'cn.rongcloud.sdk:im_lib:2.10.5'
+    implementation project(path: ':IMLib')
 
 }
